<resources>
    <string name="app_name">MonashLib</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_forget">Forget Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sigh_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_not_monash_email">Invalid, please input Monash Email</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_type">ISBN must be a number</string>
    <string name="Login_failed">Login failed</string>
    <string name="Login_success">Login successful</string>
    <string name="Get_user_data_failed">Fail to get user data </string>
    <string name="SignUp_failed">SignUp failed</string>
    <string name="SignUp_success">SignUp successful</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="fragmentSearch">Search</string>
    <string name="fragmentCategory">Category</string>
    <string name="fragmentTop">Top</string>
    <string name="fragmentFavourite">Favourites</string>
    <string name="fragmentProfile">Profile</string>

    <string name="title_activity_bottom">Bottom</string>
    <string name="title_search">Home</string>
    <string name="title_category">Dashboard</string>
    <string name="title_top">Top</string>
    <string name="title_favourite">Favourites</string>
    <string name="title_profile">Profile</string>

    <string name="hello_world">Hello world!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
